<resources>
    <string name="app_name">My College CGPA</string>
    <string name="semesters">Semesters</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="reEnterPassword">Re-enter Password</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="notSynced">not synced</string>
    <string name="isSynced">synced</string>
    <string name="empty_list">no course added yet</string>
    <string name="no_semester_desc">no semester created yet, semesters you\'ve created will appear here, to create one, click the fab icon below</string>
    <string name="no_connection">no network connection</string>
    <string name="network_available">network connected</string>
    <string name="update_course_string">UPDATE</string>
    <string name="share_info">Hey, Check out My College CGPA, an interesting app that tracks and keeps record of your college academic performance. Get it for free at</string>
    <string name="play_store_uri">http://play.google.com/store/apps/details?id=</string>
    <string name="cgpa_info_message">Manage and keep track of your college academics performances with ease, sign up and sync across all your devices</string>
    <string name="privacy_policy_message"><![CDATA[By using my college cgpa, you agree to our Terms & Privacy Policy]]></string>
    <string name="about_mycollege_cgpa">my college cgpa app helps college/university students to keep record of their academic performances, it also provides real-time statistics of the student\'s performances in respect to your semester, you can as well download the statistics record as a pdf file, share semesters with friends or families,sign up and sync across multiple devices and guess what, it\'s absolutely free.</string>
    <string name="weight_warning_txt">Please Note: Changes will occur when next you create or edit a course</string>
    <string name="tap_to_edit_weights">Tap to edit weights</string>
    <string name="view_stats">view statistics</string>
    <string name="your_best_semester_will_be_shown_here">your best semester will be shown here</string>
    <string name="no_course_des">no course created yet, to create a course, click the fab button below</string>
    <string name="no_courses">No Courses</string>
    <string name="add_course_text">add course</string>
    <string name="semester_name_hint">input semester name</string>
    <string name="change_semester_name">Change Semester Name</string>
    <string name="all_courses">All Courses</string>
    <string name="input_course_name">input course name</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="type_in_your_new_weight">type in your new weight</string>
    <string name="update_btn">Update</string>
    <string name="cancel_btn">Cancel</string>
    <string name="about_my_college_cgpa">About My College CGPA</string>
    <string name="semester_name_markerview">Semester Name</string>
    <string name="log_out">Log out</string>
    <string name="privacy_policy_txt">Privacy Policy</string>
    <string name="rate_this_app_txt">Rate This App</string>
    <string name="about_app_txt">About My College CGPA/ How to Use</string>
    <string name="share_this_app_txt">Share this App</string>
    <string name="edit_course_grade_points">Edit Course Grade points</string>
    <string name="create_semester">create semester</string>
    <string name="no_of_pdf_downloads_remaining">Numbers of pdf downloads remaining</string>
    <string name="click_to_purchase_more">click to purchase more</string>
    <string name="save_as_pdf">Save as pdf</string>
    <string name="total_courses_offered">Total courses offered</string>
    <string name="countdown_done">DONE</string>
    <string name="course_other_actions">other actions</string>
    <string name="no_semesters">No Semesters</string>
    <string name="all_semesters">All Semesters</string>
    <string name="best_semester">Best Semester</string>
    <string name="mysemesters">My Semesters</string>
    <string name="ok_proceed">OK, Proceed</string>
    <string name="delete_course">Delete</string>
    <string name="sponsored_by_mycollege_cgpa">Sponsored by MyCollege CGPA</string>
    <string name="total_credit_hours">Total credit Hours</string>
    <string name="my_stats">My Statistics</string>
    <string name="my_weights">My Weights</string>
    <string name="facebook_app_id">388013185616690</string>
    <string name="fb_login_protocol_scheme">fb388013185616690</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="create_one_acct">Create one</string>
    <string name="or_connect_with">OR CONNECT WITH</string>
    <string name="loading_wait">Loading Please wait</string>
    <string name="indicates_item_expanded_state">indicates item expanded state</string>
    <string name="FAQs">FAQs</string>
    <string name="how_to_create_a_semester">click on the pencil icon beneath your thumb and a dialog will pop-up.</string>
    <string name="how_to_create_a_course">in the home screen, click on the semester you wish to create a course for, you will be directed to the create course screen, below your thumb, there\'s a pencil icon click on it and don\'t forget to click the save icon.</string>
    <string name="gpa_limit_per_semester">the limit is 20</string>
    <string name="what_is_a_gpa">\" GPA assumes a grading scale of A, B, C, D, E/F. Each grade is assigned a number of grade points. Initially an A grade receives 4 points, a B=3, a C=2, a D=1\."</string>
    <string name="what_is_credit_hours">A credit hour is a way of measuring how much credit a student receives for attending a course which corresponds to the hours per week spent in that course.</string>
    <string name="what_are_quality_points">Quality points are used to calculate your grade point average (GPA). Quality points are earned on a descending scale where 4 quality points are awarded for an A grade and 0 quality points are awarded for an F grade.</string>
    <string name="what_happensto_my_data">all our users data are securely stored on our cloud servers, you don\'t need to worry, you can access your data upon re-installation.</string>
    <string name="how_to_increase_pdf_downloads"><![CDATA[click on view statistics in home screen ->click on the purchase more button ->then google will launch the billing flow.]]></string>
    <string name="can_i_access_on_multiple_device">Yes, using facebook, google or even email and password sign-in</string>
    <string name="how_is_my_gpa_calculated">we calculate your gpa by totaling all your credit hours, numerical grade of your grade points and then dividing the total credit hours by the total numerical grade.</string>
    <string name="how_to_edit_grade_points">No worries, you can edit the default grading to suit your school\'s, simply go to the extras screen, click on edit grade points.</string>
    <string name="itid_id" translatable="false">396570567028-evab0lus97r9igt2v21r6a8jbe5506hp.apps.googleusercontent.com</string>
    <string name="input_credit_hours_below">input credit hours below</string>
    <string name="semester_requests">Semester Requests</string>
    <string name="all_semester_requests">All Semester Requests</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="filter_none">None</string>
    <string name="filter_list_by">Filter List By:</string>
    <string name="delete_all_courses">delete All Courses</string>
    <string name="delete_all_semester_request">delete All Semester Request</string>
    <string name="personal_info">Personal Information</string>
    <string name="reject_semester_request">reject semester request</string>
    <string name="accept_semester_request">accept semester request</string>
    <string name="delete_semester_request">delete semester request</string>
    <string name="cancel_process">Cancel process</string>
    <string name="choose_an_option_to_execute">Choose an option to execute</string>
    <string name="no_sem_req_des">Semesters request sent to you will \nappear here.</string>
    <string name="no_semester_requests">No Semester Requests</string>
    <string name="notifications">Notifications</string>
</resources>
