<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_bg"
    android:elevation="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/extra_items_divider"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/cancel_process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:fontFamily="@font/product_sans_bold"
            android:padding="15dp"
            android:text="@string/cancel_process"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_clear4"
            app:drawableTint="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/accept_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:fontFamily="@font/product_sans_bold"
            android:padding="15dp"
            android:text="@string/accept_semester_request"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_baseline_check_24"
            app:drawableTint="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/reject_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:fontFamily="@font/product_sans_bold"
            android:padding="15dp"
            android:text="@string/reject_semester_request"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_reject"
            app:drawableTint="@color/colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/delete_sem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="15dp"
            android:fontFamily="@font/product_sans_bold"
            android:padding="15dp"
            android:text="@string/delete_semester_request"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp"
            app:drawableStartCompat="@drawable/ic_baseline_delete"
            app:drawableTint="@color/colorPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>