<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/weightParent"
    android:background="@drawable/search_bg">

    <TextView
        android:id="@+id/editWeightTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:text="@string/edit_weight"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/currentWeightTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editWeightTv"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newWeightParent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentWeightTv"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola"
            android:gravity="top"
            android:layout_margin="20dp"
            android:inputType="numberDecimal|number|textNoSuggestions"
            android:maxLines="2"
            android:hint="@string/type_in_your_new_weight"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/newWeightParent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updateWeightBtn"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:text="@string/update_btn"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelWeightBtn"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/capriola"
            android:text="@string/cancel_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@android:color/holo_red_dark"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@+id/updateWeightBtn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>