<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/courseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-180dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/semesterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/cl_text_bg"
                android:fontFamily="@font/capriola"
                android:hint="@string/semester_name_hint"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/instruction"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/allCourses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola"
                android:padding="15dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/all_courses"
                android:textStyle="bold"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/semesterName"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/courseRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swipeText" />

            <TextView
                android:id="@+id/swipeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola"
                android:text="Swipe left to delete"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/allCourses"
                app:drawableStartCompat="@drawable/ic_baseline_chevron_left_24"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola"
                android:padding="10dp"
                android:text="@string/change_semester_name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabCreateCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_ic"
        app:backgroundTint="@android:color/white"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/add_course_text"
        app:layout_constraintVertical_bias="0.97" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/course_empty_state" />

    <TextView
        android:id="@+id/no_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="310dp"
        android:fontFamily="@font/capriola"
        android:text="@string/no_courses"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/no_course_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/capriola"
        android:text="@string/no_course_des"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_course"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>